[gd_scene load_steps=6 format=3 uid="uid://cungbhnq1r7av"]

[ext_resource type="Script" path="res://Scripts/camera_player_group.gd" id="1_sad13"]
[ext_resource type="PackedScene" uid="uid://ymilutrw63dv" path="res://Scenes/turret_motion_component.tscn" id="2_tdt0o"]
[ext_resource type="Texture2D" uid="uid://bh7nsvxua2tv4" path="res://Assets/Images/crosshair173.png" id="3_a50bn"]
[ext_resource type="Texture2D" uid="uid://b1me86g84hu0w" path="res://Assets/Images/crosshair012.png" id="4_w4veh"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wtdqg"]
radius = 15.0

[node name="CameraGroup" type="Node3D"]
script = ExtResource("1_sad13")

[node name="turret_motion_component" parent="." instance=ExtResource("2_tdt0o")]
elevation_speed_deg = 120.0
rotation_speed_deg = 120.0
min_elevation_deg = -10.0
max_elevation_deg = 80.0

[node name="RearUnderCamera" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.3, -1.17356, -5.5)

[node name="NearMissDetector" type="Area3D" parent="RearUnderCamera" groups=["near-miss detector"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.3, 1.17356, -5.5)
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RearUnderCamera/NearMissDetector"]
shape = SubResource("SphereShape3D_wtdqg")

[node name="FreeCamera" type="Camera3D" parent="."]
top_level = true

[node name="NearMissDetector" type="Area3D" parent="FreeCamera" groups=["near-miss detector"]]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FreeCamera/NearMissDetector"]
shape = SubResource("SphereShape3D_wtdqg")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.6, -2.9)

[node name="Head" type="Node3D" parent="Body"]

[node name="FirstPersonCamera" type="Camera3D" parent="Body/Head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
current = true

[node name="NearMissDetector" type="Area3D" parent="Body/Head/FirstPersonCamera" groups=["near-miss detector"]]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -5.07052e-07, -0.6, 2.9)
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/Head/FirstPersonCamera/NearMissDetector"]
shape = SubResource("SphereShape3D_wtdqg")

[node name="TargetLeadIndicator" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.627451)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_a50bn")

[node name="CenterCrosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_w4veh")
stretch_mode = 3
